components/mongodb/overlays/dev/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mongodb-specific-ingress
  namespace: data
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: percona-server-mongodb
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: zylos-services
      ports:
        - protocol: TCP
          port: 27017

    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: observability
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
      ports:
        - protocol: TCP
          port: 9216
